istiolabs/authn-policy/namespace-foo-bar-legacy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foo
---
apiVersion: v1
kind: Namespace
metadata:
  name: bar
---
apiVersion: v1
kind: Namespace
metadata:
  name: legacy
